refactored title in similar fashion to links

--- a/components/shaker-sidenav-link/shaker-sidenav-link.html
+++ b/components/shaker-sidenav-link/shaker-sidenav-link.html
@@ -1,24 +1,5 @@
-<script>
-    (function(){
-        var ShakerSidenavLinkProto = Object.create(HTMLElement.prototype);
+<script src="shaker-sidenav-link.js"></script>
 
-        ShakerSidenavLinkProto.createdCallback = function(){
-            var shadow = this.createShadowRoot();
-            var importDocument = document.querySelector('#shaker-sidenav-link').import;
-            var template = importDocument.querySelector('#shaker-sidenav-link');
-            var templateContent = document.importNode(template.content, true);
-            var href = this.getAttribute("href");
-            var anchor = templateContent.querySelector('a');
-            anchor.href = href;
-            anchor.innerText = this.innerHTML;
-            shadow.appendChild(templateContent);
-        };
-
-        document.registerElement('shaker-sidenav-link', {
-            prototype: ShakerSidenavLinkProto
-        });
-    })();
-</script>
 <template id="shaker-sidenav-link">
     <a class="mdl-navigation__link"></a>
     <style>
@@ -55,7 +36,5 @@
 
         .mdl-navigation__link .material-icons {
             vertical-align: middle; }
-
-
     </style>
 </template>
