--- a/components/shaker-header/shaker-header.html
+++ b/components/shaker-header/shaker-header.html
@@ -2,15 +2,15 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <!-- Title -->
-            <span class="mdl-layout-title">Title</span>
+            <span class="shaker-sidenav-title">Title</span>
             <!-- Add spacer, to align navigation to the right -->
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
+            <nav class="shaker-navigation mdl-layout--large-screen-only">
+                <a class="shaker-sidenav-link" href="">Link</a>
+                <a class="shaker-sidenav-link" href="">Link</a>
+                <a class="shaker-sidenav-link" href="">Link</a>
+                <a class="shaker-sidenav-link" href="">Link</a>
             </nav>
         </div>
     </header>
