--- a/components/shaker-sidenav-link/shaker-sidenav-link.html
+++ b/components/shaker-sidenav-link/shaker-sidenav-link.html
@@ -1,9 +1,9 @@
 <script src="shaker-sidenav-link.js"></script>
 
 <template id="shaker-sidenav-link">
-    <a class="mdl-navigation__link"></a>
+    <a class="shaker-sidenav-link"></a>
     <style>
-        .mdl-navigation__link {
+        .shaker-sidenav-link {
             display: block;
             -webkit-flex-shrink: 0;
             -ms-flex-negative: 0;
@@ -13,17 +13,17 @@
             color: #757575; }
 
         @media screen and (max-width: 1024px) {
-            .mdl-navigation__link {
+            .shaker-sidenav-link {
                 padding: 16px 16px; } }
 
-        .mdl-navigation__link:hover {
+        .shaker-sidenav-link:hover {
             background-color: rgb(224,224,224); }
 
-        .mdl-navigation__link--current {
+        .shaker-sidenav-link--current {
             background-color: rgb(0,0,0);
             color: rgb(224,224,224); }
 
-        .mdl-navigation__link {
+        .shaker-sidenav-link {
             color: rgb(66,66,66);
             text-decoration: none;
             margin: 0;
@@ -34,7 +34,7 @@
             opacity: 0.87;
             font-family: "Helvetica", "Arial", sans-serif;  }
 
-        .mdl-navigation__link .material-icons {
+        .shaker-sidenav-link .material-icons {
             vertical-align: middle; }
     </style>
 </template>
