--- a/components/shaker-sidenav-title/shaker-sidenav-title.html
+++ b/components/shaker-sidenav-title/shaker-sidenav-title.html
@@ -1,17 +1,17 @@
 <script src="shaker-sidenav-title.js"></script>
 <template id="shaker-sidenav-title">
-    <span class="mdl-layout-title"></span>
+    <span class="shaker-sidenav-title"></span>
     <style>
-        .mdl-layout-title {
+        .shaker-sidenav-title {
             line-height: 64px;
             padding-left: 40px; }
 
         @media screen and (max-width: 1024px) {
-            .mdl-layout-title {
+            .shaker-sidenav-title {
                 line-height: 56px;
                 padding-left: 16px; } }
 
-        .mdl-layout-title {
+        .shaker-sidenav-title {
             display: block;
             position: relative;
             font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -25,7 +25,7 @@
             padding-left: 40px; }
 
         @media screen and (max-width: 1024px) {
-            .mdl-layout-title {
+            .shaker-sidenav-title {
                 line-height: 56px;
                 padding-left: 16px; } }
     </style>
