tested new implementation to display text from shadow dom rather than reading it from JS. so far so good, much cleaner IMO

--- a/components/shaker-sidenav-link/shaker-sidenav-link.html
+++ b/components/shaker-sidenav-link/shaker-sidenav-link.html
@@ -1,7 +1,7 @@
 <script src="shaker-sidenav-link.js"></script>
 
 <template id="shaker-sidenav-link">
-    <a class="shaker-sidenav-link"></a>
+    <a class="shaker-sidenav-link"><content></content></a>
     <style>
         .shaker-sidenav-link {
             display: block;
