--- a/components/shaker-sidenav-title/shaker-sidenav-title.html
+++ b/components/shaker-sidenav-title/shaker-sidenav-title.html
@@ -1,6 +1,6 @@
 <script src="shaker-sidenav-title.js"></script>
 <template id="shaker-sidenav-title">
-    <span class="shaker-sidenav-title"></span>
+    <span class="shaker-sidenav-title"><content></content></span>
     <style>
         .shaker-sidenav-title {
             line-height: 64px;
