--- a/components/shaker-sidenav-title/shaker-sidenav-title.html
+++ b/components/shaker-sidenav-title/shaker-sidenav-title.html
@@ -1,31 +1,17 @@
 <script src="shaker-sidenav-title.js"></script>
 <template id="shaker-sidenav-title">
-    <span class="shaker-sidenav-title"><content></content></span>
     <style>
-        .shaker-sidenav-title {
+        .shaker-title {
             line-height: 64px;
-            padding-left: 40px; }
+            padding-left: 40px;  }
 
         @media screen and (max-width: 1024px) {
-            .shaker-sidenav-title {
+            .shaker-title {
                 line-height: 56px;
                 padding-left: 16px; } }
 
-        .shaker-sidenav-title {
-            display: block;
-            position: relative;
-            font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-            font-size: 20px;
-            font-weight: 500;
-            line-height: 1;
-            letter-spacing: 0.02em;
-            font-weight: 400;
-            box-sizing: border-box;
-            line-height: 64px;
-            padding-left: 40px; }
-
         @media screen and (max-width: 1024px) {
-            .shaker-sidenav-title {
+            .shaker-title {
                 line-height: 56px;
                 padding-left: 16px; } }
     </style>
