re-working css for header-nav

--- a/components/shaker-header/shaker-header.html
+++ b/components/shaker-header/shaker-header.html
@@ -7,9 +7,9 @@
             <!-- Add spacer, to align navigation to the right -->
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
-            <shaker-headernav>
+            <shaker-header-nav>
                 <content select="shaker-header-link"></content>
-            </shaker-headernav>
+            </shaker-header-nav>
         </div>
     </header>
     <style>
