refactored all code to create custom elements into one function as the code was getting redundant, now the javascript takes one line in each imported html :)

--- a/components/shaker-header-link.html
+++ b/components/shaker-header-link.html
@@ -1,4 +1,6 @@
-<script src="shaker-header-link.js"></script>
+<script>
+    createCustomElement('shaker-header-link','a','shaker-navlink');
+</script>
 <template id="shaker-header-link">
     <style>
         .shaker-navlink {
