--- a/components/shaker-header-nav.html
+++ b/components/shaker-header-nav.html
@@ -1,4 +1,6 @@
-<script src="shaker-header-nav.js"></script>
+<script>
+    createCustomElement('shaker-header-nav');
+</script>
 <template id="shaker-header-nav">
     <nav class="shaker-header-nav">
         <content select="shaker-header-link"></content>
