--- a/components/shaker-header.html
+++ b/components/shaker-header.html
@@ -1,4 +1,6 @@
-<script src="shaker-header.js"></script>
+<script >
+    createCustomElement('shaker-header');
+</script>
 <template id="shaker-header">
     <header class="shaker-header">
         <div class="shaker-header-row">
