--- a/components/shaker-sidenav-link.html
+++ b/components/shaker-sidenav-link.html
@@ -1,4 +1,6 @@
-<script src="shaker-sidenav-link.js"></script>
+<script>
+    createCustomElement('shaker-sidenav-link','a','shaker-navlink');
+</script>
 <template id="shaker-sidenav-link">
     <style>
         .shaker-navlink {
