--- a/components/shaker-sidenav-title.html
+++ b/components/shaker-sidenav-title.html
@@ -1,4 +1,6 @@
-<script src="shaker-sidenav-title.js"></script>
+<script>
+    createCustomElement('shaker-sidenav-title','span','shaker-title');
+</script>
 <template id="shaker-sidenav-title">
     <style>
         .shaker-title {
