--- a/components/shaker-sidenav.html
+++ b/components/shaker-sidenav.html
@@ -1,4 +1,6 @@
-<script src="shaker-sidenav.js"></script>
+<script>
+    createCustomElement('shaker-sidenav');
+</script>
 
 <template id="shaker-sidenav">
 
