--- a/components/shaker-title.html
+++ b/components/shaker-title.html
@@ -1,4 +1,6 @@
-<script src="shaker-title.js"></script>
+<script>
+    createCustomElement('shaker-title');
+</script>
 <template id="shaker-title">
     <span class="shaker-title"><content></content></span>
     <style>
