added container..will most likely wrap the whole thing in a component eventually

--- a/components/shaker-header-nav.html
+++ b/components/shaker-header-nav.html
@@ -1,5 +1,5 @@
 <script>
-    createCustomElement('shaker-header-nav');
+    createCustomElement('shaker-header-nav','nav');
 </script>
 <template id="shaker-header-nav">
     <nav class="shaker-header-nav">
