--- a/components/shaker-header.html
+++ b/components/shaker-header.html
@@ -1,5 +1,5 @@
 <script >
-    createCustomElement('shaker-header');
+    createCustomElement('shaker-header','header');
 </script>
 <template id="shaker-header">
     <header class="shaker-header">
