--- a/components/shaker-sidenav.html
+++ b/components/shaker-sidenav.html
@@ -1,5 +1,5 @@
 <script>
-    createCustomElement('shaker-sidenav');
+    createCustomElement('shaker-sidenav','.shaker-fixed-drawer');
 </script>
 
 <template id="shaker-sidenav">
