--- a/components/shaker-title.html
+++ b/components/shaker-title.html
@@ -1,5 +1,5 @@
 <script>
-    createCustomElement('shaker-title');
+    createCustomElement('shaker-title', 'span');
 </script>
 <template id="shaker-title">
     <span class="shaker-title"><content></content></span>
