--- a/styles/styles.css
+++ b/styles/styles.css
@@ -247,3 +247,10 @@ ul, ol {
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0; }
+
+.shaker-container {
+    margin-left: 250px; }
+
+@media screen and (max-width: 1024px) {
+    .shaker-container {
+        margin-left: 0px; }  }
