--- a/components/x-header-nav.html
+++ b/components/x-header-nav.html
@@ -1,12 +1,12 @@
 <script>
-    createCustomElement('shaker-header-nav','nav');
+    createCustomElement('x-header-nav','nav');
 </script>
-<template id="shaker-header-nav">
-    <nav class="shaker-header-nav">
-        <content select="shaker-header-link"></content>
+<template id="x-header-nav">
+    <nav class="x-header-nav">
+        <content select="x-header-link"></content>
     </nav>
     <style>
-        .shaker-header-nav {
+        .x-header-nav {
             display: -webkit-flex;
             display: -ms-flexbox;
             display: flex;
@@ -26,7 +26,7 @@
             align-items: center; }
 
         @media screen and (max-width: 1024px) {
-            .shaker-header-nav {
+            .x-header-nav {
                 height: 56px; } }
     </style>
 </template>
