--- a/components/x-navlink.html
+++ b/components/x-navlink.html
@@ -1,7 +1,7 @@
-<template id="shaker-navlink">
-    <a class="shaker-navlink"><content></content></a>
+<template id="x-navlink">
+    <a class="x-navlink"><content></content></a>
     <style>
-        .shaker-navlink {
+        .x-navlink {
             color: rgb(66,66,66);
             text-decoration: none;
             margin: 0;
