--- a/components/x-sidenav-link.html
+++ b/components/x-sidenav-link.html
@@ -1,9 +1,9 @@
 <script>
-    createCustomElement('shaker-sidenav-link','a','shaker-navlink');
+    createCustomElement('x-sidenav-link','a','x-navlink');
 </script>
-<template id="shaker-sidenav-link">
+<template id="x-sidenav-link">
     <style>
-        .shaker-navlink {
+        .x-navlink {
             display: block;
             -webkit-flex-shrink: 0;
             -ms-flex-negative: 0;
@@ -13,9 +13,9 @@
             color: #757575; }
 
         @media screen and (max-width: 1024px) {
-            .shaker-navlink {
+            .x-navlink {
                 padding: 16px 16px; } }
-        .shaker-navlink:hover {
+        .x-navlink:hover {
             background-color: rgb(224,224,224); }
     </style>
 </template>
