--- a/components/x-sidenav-title.html
+++ b/components/x-sidenav-title.html
@@ -1,19 +1,19 @@
 <script>
-    createCustomElement('shaker-sidenav-title','span','shaker-title');
+    createCustomElement('x-sidenav-title','span','x-title');
 </script>
-<template id="shaker-sidenav-title">
+<template id="x-sidenav-title">
     <style>
-        .shaker-title {
+        .x-title {
             line-height: 64px;
             padding-left: 40px;  }
 
         @media screen and (max-width: 1024px) {
-            .shaker-title {
+            .x-title {
                 line-height: 56px;
                 padding-left: 16px; } }
 
         @media screen and (max-width: 1024px) {
-            .shaker-title {
+            .x-title {
                 line-height: 56px;
                 padding-left: 16px; } }
     </style>
