--- a/components/x-title.html
+++ b/components/x-title.html
@@ -1,10 +1,10 @@
 <script>
-    createCustomElement('shaker-title', 'span');
+    createCustomElement('x-title', 'span');
 </script>
-<template id="shaker-title">
-    <span class="shaker-title"><content></content></span>
+<template id="x-title">
+    <span class="x-title"><content></content></span>
     <style>
-        .shaker-title {
+        .x-title {
             display: block;
             position: relative;
             font-family: "Roboto", "Helvetica", "Arial", sans-serif;
