--- a/components/x-sidenav.html
+++ b/components/x-sidenav.html
@@ -1,48 +1,48 @@
 <script>
-    createCustomElement('shaker-sidenav','.shaker-fixed-drawer');
+    createCustomElement('x-sidenav','.x-fixed-drawer');
 </script>
 
-<template id="shaker-sidenav">
+<template id="x-sidenav">
 
-    <div class="shaker-fixed-drawer">
-        <div class="shaker-drawer">
-            <content select="shaker-sidenav-title"></content>
-            <nav class="shaker-navigation">
-                <content select="shaker-sidenav-link"></content>
+    <div class="x-fixed-drawer">
+        <div class="x-drawer">
+            <content select="x-sidenav-title"></content>
+            <nav class="x-navigation">
+                <content select="x-sidenav-link"></content>
             </nav>
         </div>
     </div>
     <style>
         @media screen and (min-width: 1025px) {
-            .shaker-fixed-drawer > .shaker-drawer {
+            .x-fixed-drawer > .x-drawer {
                 -webkit-transform: translateX(0);
                 transform: translateX(0); } }
 
         @media screen and (min-width: 1025px) {
-            .shaker-fixed-drawer > .mdl-layout__drawer-button {
+            .x-fixed-drawer > .mdl-layout__drawer-button {
                 display: none; }
             .mdl-layout--no-desktop-drawer-button .mdl-layout__drawer-button {
                 display: none; } }
 
-        .shaker-fixed-drawer.is-upgraded:not(.is-small-screen) > .mdl-layout__header {
+        .x-fixed-drawer.is-upgraded:not(.is-small-screen) > .mdl-layout__header {
             margin-left: 240px;
             width: calc(100% - 240px); }
 
         @media screen and (min-width: 1025px) {
-            .shaker-fixed-drawer > .mdl-layout__header .mdl-layout__header-row {
+            .x-fixed-drawer > .mdl-layout__header .mdl-layout__header-row {
                 padding-left: 40px; } }
 
-        .shaker-fixed-drawer > .mdl-layout__content {
+        .x-fixed-drawer > .mdl-layout__content {
             margin-left: 240px; }
 
         @media screen and (max-width: 1024px) {
-            .shaker-fixed-drawer > .mdl-layout__content {
+            .x-fixed-drawer > .mdl-layout__content {
                 margin-left: 0; }
             .mdl-layout__container.has-scrolling-header .mdl-layout__content {
                 overflow-y: auto;
                 overflow-x: hidden; } }
 
-        .shaker-drawer {
+        .x-drawer {
             display: -webkit-flex;
             display: -ms-flexbox;
             display: flex;
@@ -77,17 +77,17 @@
             overflow-y: auto;
             z-index: 5; }
 
-        .shaker-drawer.is-visible {
+        .x-drawer.is-visible {
             -webkit-transform: translateX(0);
             transform: translateX(0); }
-        .shaker-drawer.is-visible ~ .mdl-layout__content.mdl-layout__content {
+        .x-drawer.is-visible ~ .mdl-layout__content.mdl-layout__content {
             overflow: hidden; }
-        .shaker-drawer > * {
+        .x-drawer > * {
             -webkit-flex-shrink: 0;
             -ms-flex-negative: 0;
             flex-shrink: 0; }
 
-        .shaker-drawer .shaker-navigation {
+        .x-drawer .x-navigation {
             -webkit-flex-direction: column;
             -ms-flex-direction: column;
             flex-direction: column;
@@ -97,7 +97,7 @@
             align-items: stretch;
             padding-top: 16px; }
 
-        .shaker-navigation {
+        .x-navigation {
             display: -webkit-flex;
             display: -ms-flexbox;
             display: flex;
