minified my js and renamed function

--- a/components/x-header-link.html
+++ b/components/x-header-link.html
@@ -1,5 +1,5 @@
 <script>
-    createCustomElement('x-header-link','a','x-navlink');
+    customElement('x-header-link','a','x-navlink');
 </script>
 <template id="x-header-link">
     <style>
