--- a/components/x-header-nav.html
+++ b/components/x-header-nav.html
@@ -1,5 +1,5 @@
 <script>
-    createCustomElement('x-header-nav','nav');
+    customElement('x-header-nav','nav');
 </script>
 <template id="x-header-nav">
     <nav class="x-header-nav">
