--- a/components/x-header.html
+++ b/components/x-header.html
@@ -1,5 +1,5 @@
 <script >
-    createCustomElement('x-header','header');
+    customElement('x-header','header');
 </script>
 <template id="x-header">
     <header class="x-header">
