--- a/components/x-sidenav-link.html
+++ b/components/x-sidenav-link.html
@@ -1,5 +1,5 @@
 <script>
-    createCustomElement('x-sidenav-link','a','x-navlink');
+    customElement('x-sidenav-link','a','x-navlink');
 </script>
 <template id="x-sidenav-link">
     <style>
