--- a/components/x-sidenav-title.html
+++ b/components/x-sidenav-title.html
@@ -1,5 +1,5 @@
 <script>
-    createCustomElement('x-sidenav-title','span','x-title');
+    customElement('x-sidenav-title','span','x-title');
 </script>
 <template id="x-sidenav-title">
     <style>
