--- a/components/x-sidenav.html
+++ b/components/x-sidenav.html
@@ -1,5 +1,5 @@
 <script>
-    createCustomElement('x-sidenav','.x-fixed-drawer');
+    customElement('x-sidenav','.x-fixed-drawer');
 </script>
 
 <template id="x-sidenav">
