--- a/components/x-title.html
+++ b/components/x-title.html
@@ -1,5 +1,5 @@
 <script>
-    createCustomElement('x-title', 'span');
+    customElement('x-title', 'span');
 </script>
 <template id="x-title">
     <span class="x-title"><content></content></span>
